force-app/main/default/objects/OrderItemProdPlan__c/OrderItemProdPlan__c.object-meta.xml
<CustomObject>
    <label>Order Item: Prod. Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Items: Prod. Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>