force-app/main/default/objects/OrderItemProdPlan__c/fields/DateFrom__c.field-meta.xml
<CustomField>
    <fullName>DateFrom__c</fullName>
    <label>Date From</label>
    <type>Date</type>
</CustomField>