force-app/main/default/objects/OrderItemProdPlan__c/fields/DatePlan__c.field-meta.xml
<CustomField>
    <fullName>DatePlan__c</fullName>
    <label>Date Plan</label>
    <type>Date</type>
</CustomField>