force-app/main/default/objects/OrderItemProdPlan__c/fields/DateSnapshot__c.field-meta.xml
<CustomField>
    <fullName>DateSnapshot__c</fullName>
    <label>Date Snapshot</label>
    <type>Date</type>
</CustomField>