force-app/main/default/objects/OrderItemProdPlan__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Items: Prod. Plans</relationshipLabel>
    <relationshipName>Order_Items_Prod_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>