force-app/main/default/objects/OrderItemProdPlan__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipName>Order_Items_Prod_Plans3</relationshipName>
    <type>Lookup</type>
</CustomField>