force-app/main/default/objects/OrderItemProdPlan__c/fields/PlanQty_t__c.field-meta.xml
<CustomField>
    <fullName>PlanQty_t__c</fullName>
    <label>Plan. Qty (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>