force-app/main/default/objects/OrderItemProdPlan__c/fields/ProdPlanType__c.field-meta.xml
<CustomField>
    <fullName>ProdPlanType__c</fullName>
    <label>Prod Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProdPlanType</valueSetName>
    </valueSet>
</CustomField>