force-app/main/default/objects/OrderItemProdPlan__c/fields/ProdWeek__c.field-meta.xml
<CustomField>
    <fullName>ProdWeek__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProdWeek</label>
    <referenceTo>ProdWeeksH__c</referenceTo>
    <relationshipName>Order_Items_Prod_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>