force-app/main/default/objects/OrderItemProdPlan__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Order Items: Prod. Plans</relationshipLabel>
    <relationshipName>Order_Items_Prod_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>