force-app/main/default/objects/OrderItemProdPlan__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <length>10</length>
    <type>Text</type>
</CustomField>