force-app/main/default/objects/OrderItemProdPlan__c/fields/WeekNum__c.field-meta.xml
<CustomField>
    <fullName>WeekNum__c</fullName>
    <label>Week Num</label>
    <length>4</length>
    <type>Text</type>
</CustomField>